<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.addLocation.AddLocationFragment">

    <TextView
        android:id="@+id/addLocation_name_textView"
        style="@style/addLocation_title"
        android:layout_marginTop="50dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/addLocation_name_editText"
        style="@style/addLocation_editText"
        android:hint="@string/enter_a_name_for_the_location"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addLocation_name_textView" />

    <TextView
        android:id="@+id/addLocation_address_textView"
        style="@style/addLocation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocation_name_editText" />

    <EditText
        android:id="@+id/addLocation_address_editText"
        style="@style/addLocation_editText"
        android:hint="@string/enter_the_address"
        android:lines="2"
        android:minLines="2"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addLocation_address_textView" />

    <TextView
        android:id="@+id/addLocation_latitude_textView"
        style="@style/addLocation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/latitude"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addLocation_address_editText" />

    <TextView
        android:id="@+id/addLocation_longitude_textView"
        style="@style/addLocation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="0dp"
        android:text="@string/longitude"
        app:layout_constraintStart_toStartOf="@+id/addLocation_longitude_editText"
        app:layout_constraintTop_toBottomOf="@+id/addLocation_address_editText" />


    <EditText
        android:id="@+id/addLocation_latitude_editText"
        style="@style/addLocation_editText"
        android:layout_width="0dp"
        android:layout_marginEnd="10dp"
        android:hint="@string/enter_latitude"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toStartOf="@+id/addLocation_longitude_editText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/addLocation_latitude_textView" />


    <EditText
        android:id="@+id/addLocation_longitude_editText"
        style="@style/addLocation_editText"
        android:layout_width="0dp"
        android:layout_marginStart="10dp"
        android:hint="@string/enter_longitude"
        android:inputType="numberDecimal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/addLocation_latitude_editText"
        app:layout_constraintTop_toBottomOf="@id/addLocation_longitude_textView" />

    <TextView
        android:id="@+id/addLocation_seats_textView"
        style="@style/addLocation_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/number_of_seats"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/addLocation_seats_editText"
        app:layout_constraintBottom_toBottomOf="@+id/addLocation_seats_editText"/>

    <EditText
        android:id="@+id/addLocation_seats_editText"
        style="@style/addLocation_editText"
        android:layout_width="0dp"
        android:layout_marginTop="15dp"
        android:layout_marginStart="20dp"
        android:hint="@string/enter_seat_count"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/addLocation_latitude_editText"
        app:layout_constraintTop_toBottomOf="@+id/addLocation_longitude_editText" />

    <LinearLayout
        android:id="@+id/addLocation_search_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/white_shape"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="50dp"
        app:layout_constraintTop_toBottomOf="@id/addLocation_seats_editText">

        <ImageButton
            android:id="@+id/maps_search_button"
            style="@android:style/Widget.Material.Light.ImageButton"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/common_google_signin_btn_icon_light_normal_background"
            android:contentDescription="@string/places_autocomplete_search_hint"
            app:srcCompat="@drawable/quantum_ic_search_grey600_24" />

        <TextView
            android:id="@+id/maps_search_textView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:textSize="20sp"
            android:textColor="@color/colorDarkText"
            android:text="@string/choose_location_with_google_places" />

    </LinearLayout>

    <TextView
        android:id="@+id/addLocation_googleId_textView"
        style="@style/addLocation_title"
        android:layout_marginTop="20dp"
        android:layout_marginStart="0dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/addLocation_search_container"
        app:layout_constraintStart_toStartOf="@id/addLocation_search_container"
        android:visibility="invisible"
        tools:text="GoogleId"/>

    <Button
        android:id="@+id/addLocation_times_button"
        style="@style/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/operating_times"
        android:minWidth="200dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/location_delete_imageView"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginEnd="25dp"
        app:layout_constraintBottom_toTopOf="@+id/addLocation_name_editText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_del_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>